--- a/src/view/Admin/Index/index.scss
+++ b/src/view/Admin/Index/index.scss
@@ -1,10 +1,11 @@
-.header{
+.header {
     padding: 0px 20px 0px 0px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.demo-logo-vertical{
+
+.demo-logo-vertical {
     width: 100%;
     height: 150px;
     display: flex;
@@ -12,14 +13,44 @@
     justify-content: center;
     align-items: center;
     padding: 0px;
-    p{
+
+    p {
         margin: 10px;
         color: #ffffff;
     }
 }
-.content{
+
+.content {
     margin: 10px 16px 20px 16px;
     height: calc(100vh - 60px);
     overflow-y: scroll;
     padding: 24px;
+}
+
+.content::-webkit-scrollbar {
+    /*滚动条整体样式*/
+    width: 10px;
+    /*高宽分别对应横竖滚动条的尺寸*/
+    height: 1px;
+}
+
+.content::-webkit-scrollbar-thumb {
+    /*滚动条里面小方块*/
+    border-radius: 10px;
+    background-color: skyblue !important;
+    background-image: -webkit-linear-gradient(45deg,
+            rgba(255, 255, 255, 0.2) 25%,
+            transparent 25%,
+            transparent 50%,
+            rgba(255, 255, 255, 0.2) 50%,
+            rgba(255, 255, 255, 0.2) 75%,
+            transparent 75%,
+            transparent);
+}
+
+.content::-webkit-scrollbar-track {
+    /*滚动条里面轨道*/
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    background: #ededed;
+    border-radius: 10px;
 }
